font spacing corrected

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -23,7 +23,7 @@
   font-size: 32px;
   font-weight: bolder;
   font-family: $headers-font;
-  letter-spacing: 12px;
+  letter-spacing: 5px;
 
 }
 
